// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: error, compact: false and direction: 'column' 1`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: error, compact: false and direction: 'column' 2`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: none, compact: false and direction: 'column' 1`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: none, compact: false and direction: 'column' 2`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: none, compact: false and direction: 'column' 3`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: success, compact: false and direction: 'column' 1`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: success, compact: false and direction: 'column' 2`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: error, compact: false and direction: 'column' 1`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: error, compact: false and direction: 'column' 2`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: none, compact: false and direction: 'column' 1`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: none, compact: false and direction: 'column' 2`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: success, compact: true and direction: 'column' 1`] = `
":host {
  --_p-radio-group-a: 0.64285714;
  --_p-radio-group-option-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: success, compact: true and direction: 'column' 2`] = `
":host {
  --_p-radio-group-a: 0.64285714;
  --_p-radio-group-option-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: true, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, compact: false and direction: 'column' 1`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
::slotted(*:not([slot])) {
  opacity: 0.4 !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
@media(forced-colors:active) {
  ::slotted(*:not([slot])) {
    opacity: 1 !important;
    color: GrayText !important;
  }
}

.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.spinner {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  pointer-events: none;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}"
`;

exports[`getComponentCss() > should return correct css for disabled: true, loading: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, compact: false and direction: 'column' 1`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(forced-colors:active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}"
`;

exports[`getComponentCss() > should return correct css for disabled: true, loading: true, hideLabel: true, state: error, compact: false and direction: 'column' 1`] = `
":host {
  --_p-radio-group-a: 1;
  --_p-radio-group-option-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
::slotted(*:not([slot])) {
  opacity: 0.4 !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
@media(forced-colors:active) {
  ::slotted(*:not([slot])) {
    opacity: 1 !important;
    color: GrayText !important;
  }
}

.root {
  all: unset;
  display: grid;
  justify-self: flex-start;
  row-gap: var(--p-spacing-static-xs);
}
.wrapper {
  align-items: stretch;
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  column-gap: calc(22.4px * (var(--_p-radio-group-a) - 0.64285714) + 8px);
  row-gap: calc(11.2px * (var(--_p-radio-group-a) - 0.64285714) + 4px);
}
.spinner {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out),opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}"
`;
